# gvtools-legacy

./: .gitignore  guidelines.txt  pom.xml
applications/: pom.xml
applications/appCatalogAndGazetteerClient/: .classpath  .project  build.xml  pom.xml
applications/appgvSIG/: .classpath  .project  build.xml  compile-classpath.xml  package.info  pom.xml
applications/gvsig/: pom.xml
artwork/installer/: left-side.xcf  splash.xcf
artwork/logo/: LICENSE  README
binaries/ant/: utilities.xml
binaries/linux/: build.xml  libNCSEcw.so.0  libNCSEcwC.so.0  libNCSUtil.so.0  libOpenThreads.so.2.4.0  libjecw.so.0  libjpotrace.so.0  libosg.so.2.8.2  libosg.so.55  libosgAnimation.so.55  libosgDB.so.55  libosgFX.so.2.8.2  libosgFX.so.55  libosgGA.so.2.8.2  libosgGA.so.55  libosgManipulator.so.55  libosgParticle.so.55  libosgShadow.so.55  libosgSim.so.2.8.2  libosgSim.so.55  libosgTerrain.so.55  libosgText.so.2.8.2  libosgText.so.55  libosgUtil.so.2.8.2  libosgUtil.so.55  libosgViewer.so.2.8.2  libosgViewer.so.55  libosgVolume.so.2.8.2  libpq.so.5  libssl.so.0
binaries/mac/: build.xml
binaries/w32/: build.xml
docs/MERGE/: GRASS_arbeitsplan.lyx  RGRASS_Notes.rtf  Signal_Processing_GRASS_Modules.lyx  TODO.lyx  geophysics.txt  grass-modules-to-be-developed.txt  grass-notes.txt  grass.tgz  gvSIG_SEXTANTE_compilation.lyx  hotkeys.txt  mustererkennung_ideen.txt  svn-eclipse-notes.txt  svn-log-past-1253.txt  white_paper.doc
docs/geotools-integration/: class-diagram-gt.dia  class-diagram.dia  projections-class-diagram-gt.dia  projections-class-diagram.dia
docs/javadoc/: .project  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  overview-summary.html  overview-tree.html  package-list  serialized-form.html
extensions/: pom.xml
extensions/corePlugin/: pom.xml
extensions/extAddEventTheme/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extAnnotations/: .classpath  .cvsignore  .project  build.xml  package.info  pom.xml
extensions/extArcims/: .classpath  .project  Cliente-ArcIMS.number  build.xml  javadoc.xml  package.info  pom.xml
extensions/extCAD/: .classpath  .project  package.info  pom.xml
extensions/extCatalogAndGazetteer/: .classpath  .project  build.number  build.xml  package.info  pom.xml
extensions/extCenterViewToPoint/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extDataLocator/: .classpath  .project  build.xml  package.info
extensions/extDerivedGeometries/: .classpath  .project  build.xml  package.info
extensions/extDwg/: build.xml  package.info
extensions/extExpressionField/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extGPE-gvSIG/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extGeoProcessing/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extGeoprocessingExtensions/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extGeoreferencing/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extGraph/: .classpath  .project  build.number  build.xml  plantilla.htm  pom.xml
extensions/extGridViewLayout/: .classpath  build.xml
extensions/extHelp/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extHyperlink/: .classpath  .project  build.number  build.xml  package.info  pom.xml
extensions/extI18n/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extIconThemeBase/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extJCRS/: .classpath  build.xml  package.info
extensions/extJDBC/: .classpath  .project  build.xml  package.info  pom.xml
extensions/extLayerLoadingOrder/: .classpath  .project  build.number  build.xml  package.info  pom.xml
extensions/extMeasureGeometry/: .classpath  .project  build.xml  pom.xml
extensions/extNormalization/: .classpath  .project  CHANGES.txt  COPING.txt  README.txt  build.number  pom.xml  (+1 more)
frameworks/: pom.xml
libraries/: pom.xml
libraries/libjni-ecw/: .classpath  .project  CMakeLists.txt  build.xml  pom.xml
libraries/libjni-ecw/CMakeModules/: FindECW.cmake
libraries/libjni-ecw/src/main/java/com/ermapper/ecw/: JNCSError.java  JNCSException.java  JNCSFile.java  JNCSFileNotOpenException.java  JNCSFileOpenFailedException.java  JNCSInvalidSetViewException.java  JNCSNativeLibraryException.java  JNCSProgressiveUpdate.java  JNCSReadLineException.java  JNCSRenderer.java
libraries/libjni-ecw/src/main/java/com/ermapper/util/: JNCSDatasetPoint.java  JNCSScreenPoint.java  JNCSWorldPoint.java
libraries/libjni-ecw/src/main/java/es/gva/cit/jecwcompress/: CellSizeUnits.java  CompressFormat.java  CompressHint.java  EcwException.java  JNIBase.java  JniObject.java  NCSEcwCompressClient.java  NCSError.java  ReadCallBack.java
libraries/libjni-ecw/src/main/native/: CMakeLists.txt
libraries/libjni-ecw/src/main/native/jecw/: CMakeLists.txt  JNCSFile.h  NCSBuildNumber.h  ecw_jni.c  ncsecwcompressclient_wrapper.c
libraries/libjni-ecw/src/test/java/com/ermapper/ecw/: TestCompressImage.java  TestReadEcw.java
libraries/libjni-gdal/src/main/native/jgdal/: CMakeLists.txt  Makefile  cmake_install.cmake  gdal_interfaz.c  gdalwarp_interfaz.cpp  ogrfeaturedefn_interfaz.cpp  ogrspatialreference_interfaz.c  warpfunc.cpp
libraries/libjni-mrsid/src/main/native/jmrsid/: CMakeLists.txt  ltiimage.cpp  ltiimagestage.cpp  ltimetadatadatabase.cpp  ltimetadatarecord.cpp  ltipixel.cpp  ltiscene.cpp  ltiscenebuffer.cpp  ltiutils.cpp  mrsidimagereader.cpp  mrsidimagereaderbase.cpp
libraries/libjni-potrace/resources/potrace-1.8/: .cproject  .project  CMakeLists.txt  build.xml
libraries/libjni-potrace/resources/potrace-1.8/src/: CMakeLists.txt  bitmap_io.c  potrace_raster.c
libraries/libjni-potrace/src/main/native/jpotrace/: CMakeLists.txt  Makefile  backend_eps.c  backend_pdf.c  backend_pgm.c  backend_svg.c  backend_xfig.c  cmake_install.cmake  config.h  decompose.c  getopt.c  potrace.c  potrace_raster.c  potrace_raster.h  potracelib.c
overlays/: README.txt
(+24418 files in other folders)
