
CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
#cmake_minimum_required(VERSION 2.6)

PROJECT(potrace)

SET(VERSION "1.8")

SET(POTRACE "potrace")
SET(MKBITMAP "mkbitmap")

SET(MAKELIBRARY 1)

ADD_DEFINITIONS(-DPOTRACE=\\"${POTRACE}\\")
ADD_DEFINITIONS(-DVERSION=\\"${VERSION}\\")
ADD_DEFINITIONS(-DMKBITMAP=\\"${MKBITMAP}\\")

ADD_SUBDIRECTORY(src)
