set(LIB_NAME jecw)

FILE(GLOB LIB_PUBLIC_HEADERS "${HEADER_PATH}/*.h")


FILE(GLOB LIB_COMMON_FILES "*.c")


include_directories(
	${JAVA_INCLUDE_PATH}
	${JAVA_INCLUDE_PATH2}
	${ECW_INCLUDE_DIR}
)

add_library(${LIB_NAME} SHARED
	${LIB_PUBLIC_HEADERS}
	${LIB_COMMON_FILES}
)

IF(WIN32)
	target_link_libraries(${LIB_NAME}
		${ECW_LIBRARY}
		${ECW_LIBRARY2}
		${ECW_LIBRARY3}
	)
ELSE(WIN32)
	target_link_libraries(${LIB_NAME}
		${ECW_LIBRARY}
		${ECW_LIBRARY2}
		${ECW_LIBRARY3}
		${ECW_LIBRARY4}
	)
ENDIF(WIN32)


if(APPLE)
SET_TARGET_PROPERTIES(${LIB_NAME}
	PROPERTIES
	SUFFIX .jnilib)
endif(APPLE)

INCLUDE(ModuleInstall OPTIONAL)

SET_TARGET_PROPERTIES(jecw PROPERTIES VERSION "${JECW_VERSION}")
IF(UNIX)
	SET_TARGET_PROPERTIES(jecw PROPERTIES OUTPUT_NAME "jecw${VERSION}")
ENDIF(UNIX)
IF(WIN32)
	SET_TARGET_PROPERTIES(jecw PROPERTIES OUTPUT_NAME "jecw${JECW_VERSION}")
ENDIF(WIN32)


IF(UNIX AND NOT APPLE)
	SET_TARGET_PROPERTIES ( ${LIB_NAME} PROPERTIES LINK_FLAGS "-Wl,-E")
ENDIF(UNIX AND NOT APPLE)

