set(LIB_NAME jmrsid)


FILE(GLOB LIB_PUBLIC_HEADERS "${HEADER_PATH}/*.h")
FILE(GLOB LIB_COMMON_FILES "*.c*")
include_directories(
	${CMAKE_SOURCE_DIR}/include
	${JAVA_INCLUDE_PATH}
	${JAVA_INCLUDE_PATH2}
	${MRSID_INCLUDE_DIR}
	${MRSID_INCLUDE_DIR2}
	${MRSID_INCLUDE_DIR3}
	${MRSID_INCLUDE_DIR4}
	${MRSID_INCLUDE_DIR5}
	${MRSID_INCLUDE_DIR6}
	${MRSID_INCLUDE_DIR7}
	${MRSID_INCLUDE_DIR8}
)

add_library(${LIB_NAME} SHARED
	${LIB_PUBLIC_HEADERS}
	${LIB_COMMON_FILES}
)

IF(UNIX)
	target_link_libraries(${LIB_NAME}
		${MRSID_LIBRARY}
	)
ENDIF(UNIX)

IF(WIN32)
	target_link_libraries(${LIB_NAME}
		${MRSID_LIBRARY_W1}
		$(MRSID_LIBRARY_W2)
	)
ENDIF(WIN32)

if(APPLE)
SET_TARGET_PROPERTIES(${LIB_NAME}
	PROPERTIES
	SUFFIX .jnilib)
endif(APPLE)

INCLUDE(ModuleInstall OPTIONAL)

SET_TARGET_PROPERTIES(jmrsid PROPERTIES VERSION "${JMRSID_VERSION}")
IF(UNIX)
	SET_TARGET_PROPERTIES(jmrsid PROPERTIES OUTPUT_NAME "jmrsid${VERSION}")
ENDIF(UNIX)
IF(WIN32)
	SET_TARGET_PROPERTIES(jmrsid PROPERTIES OUTPUT_NAME "jmrsid${JMRSID_VERSION}")
ENDIF(WIN32)

IF(UNIX AND NOT APPLE)
	SET_TARGET_PROPERTIES ( ${LIB_NAME} PROPERTIES LINK_FLAGS "-Wl,-E")
ENDIF(UNIX AND NOT APPLE)

