set(LIB_NAME jpotrace)

FILE(GLOB LIB_PUBLIC_HEADERS "${HEADER_PATH}/*.h")
FILE(GLOB LIB_COMMON_FILES "*.c*")

include_directories(
	${CMAKE_SOURCE_DIR}/include
	${JAVA_INCLUDE_PATH}
	${JAVA_INCLUDE_PATH2}
	${POTRACE_INCLUDE_DIR}
)

add_library(${LIB_NAME} SHARED 
	${LIB_PUBLIC_HEADERS}
	${LIB_COMMON_FILES}
)

target_link_libraries(${LIB_NAME}
	${POTRACE_LIBRARY}
)

if(APPLE)
SET_TARGET_PROPERTIES(${LIB_NAME}
	PROPERTIES
	SUFFIX .jnilib)
endif(APPLE)

INCLUDE(ModuleInstall OPTIONAL)

SET_TARGET_PROPERTIES(jpotrace PROPERTIES VERSION "${JPOTRACE_VERSION}")
IF(WIN32)
	SET_TARGET_PROPERTIES(jpotrace PROPERTIES OUTPUT_NAME "jpotrace${JPOTRACE_VERSION}")
ENDIF(WIN32)
IF(UNIX)
	SET_TARGET_PROPERTIES(jpotrace PROPERTIES OUTPUT_NAME "jpotrace${VERSION}")
ENDIF(UNIX)

IF(UNIX AND NOT APPLE)
	SET_TARGET_PROPERTIES ( ${LIB_NAME} PROPERTIES LINK_FLAGS "-Wl,-E")
ENDIF(UNIX AND NOT APPLE)

